--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Hospital Shift - covid19</title>
   </head>
   <body>
-    <canvas width="600" height="600"></canvas>
+    <button id="button">Start game!</button>
+    <canvas width="800" height="800"></canvas>
     <script src="scripts/maze-structure.js"></script>
     <script src="scripts/maze.js"></script>
     <script src="scripts/patients.js"></script>
@@ -17,5 +18,6 @@
     <script src="scripts/character.js"></script>
     <script src="scripts/game.js"></script>
     <script src="scripts/main.js"></script>
+    <button id="button">Play again!</button>
   </body>
 </html>
