--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Hospital Shift - covid19</title>
   </head>
   <body>
-    <button id="button">Start game!</button>
+    <button id="start">Start game!</button>
     <canvas width="800" height="800"></canvas>
+    <button id="restart">Play again?</button>
     <script src="scripts/maze-structure.js"></script>
     <script src="scripts/maze.js"></script>
     <script src="scripts/patients.js"></script>
@@ -18,6 +19,5 @@
     <script src="scripts/character.js"></script>
     <script src="scripts/game.js"></script>
     <script src="scripts/main.js"></script>
-    <button id="button">Play again!</button>
   </body>
 </html>
